--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <lombok.version>1.16.10</lombok.version>
         <slf4j.version>1.6.4</slf4j.version>
         <logback.version>1.0.1</logback.version>
+        <jgrapht.version>1.0.0</jgrapht.version>
+        <gs.version>1.3</gs.version>
     </properties>
 
     <dependencies>
@@ -38,6 +40,33 @@
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-ui</artifactId>
+            <version>${gs.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-core</artifactId>
+            <version>${gs.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-algo</artifactId>
+            <version>${gs.version}</version>
+        </dependency>
+
+        <!-- The new dependency : -->
+        <dependency>
+            <artifactId>commons-math</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <version>2.1</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
@@ -46,9 +75,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerVersion>1.6</compilerVersion>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <compilerVersion>1.8</compilerVersion>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
