--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <logback.version>1.0.1</logback.version>
         <jgrapht.version>1.0.0</jgrapht.version>
         <gs.version>1.3</gs.version>
+        <commons.version>3.4</commons.version>
+        <commons-math3.version>3.6.1</commons-math3.version>
+        <commons-collections4.version>4.1</commons-collections4.version>
     </properties>
 
     <dependencies>
@@ -58,11 +61,22 @@
             <version>${gs.version}</version>
         </dependency>
 
-        <!-- The new dependency : -->
         <dependency>
-            <artifactId>commons-math</artifactId>
             <groupId>org.apache.commons</groupId>
-            <version>2.1</version>
+            <artifactId>commons-math3</artifactId>
+            <version>${commons-math3.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons-collections4.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.version}</version>
         </dependency>
 
 
